cmake_minimum_required(VERSION 3.26)
project(CS255)

set(CMAKE_CXX_STANDARD 20)

add_executable(Question1 Homework1/Question1.cpp)
add_executable(Question2 Homework1/Question2.cpp)
add_executable(Question3 Homework1/Question3.cpp)
add_executable(Question4 Homework1/Question4.cpp)
add_executable(Question6 Homework1/Question6.cpp)
add_executable(Question7 Homework1/Question7.cpp)
add_executable(Homework2Question1 Homework2/Question1.cpp)
add_executable(Homework2Question2 Homework2/Question2.cpp)
add_executable(Homework2Question3 Homework2/Question3.cpp)
add_executable(Homework2Question4 Homework2/Question4.cpp)
add_executable(Hercules Midterm2/PartB.cpp)
add_executable(Erdos Midterm2/PartB.cpp)